project1/testproject/backend2.yaml
# 5. Backend Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: my-app
          image: buginets/node-js-api # Replace with your image
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30     # wait 10s after container starts
            periodSeconds: 5            # check every 5s
            failureThreshold: 3         # 3 failed checks = not ready
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30     # wait 30s before first check
            periodSeconds: 10           # check every 10s
            failureThreshold: 3  
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
