project1/testproject/frontend2.yaml

# 7. Frontend Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-app
  template:
    metadata:
      labels:
        app: frontend-app
    spec:
      containers:
        - name: frontend-app
          image: buginets/node-js-web  # Replace with your image
          ports:
            - containerPort: 3000
