project1/testproject/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-node-app-web
  labels:
    app: nodejs-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejs-web
  template:
    metadata:
      labels:
        app: nodejs-web
    spec:
      containers:
        - name: nodejs-web
          image: buginets/node-js-web
          ports:
            - containerPort: 3000

          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3                
---


apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: nodejs-web
  ports:
    - port: 80
      targetPort: 3000
  # type: NodePort
