project1/testproject/mysql.yaml

apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  labels:
    app: mysql
spec:
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 1433
      name: mysql
  type: ClusterIP    
  clusterIP: None
  selector:
    app: mysql
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  serviceName: mysql-service
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Delete
    whenScaled: Delete    
  template:
    metadata:
      labels:
        app: mysql
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: mysql
          image: mysql:5.7
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
          # readinessProbe:
          #   exec:
          #     command: ["mysqladmin", "ping", "-h", "127.0.0.1"]
          #   initialDelaySeconds: 15
          #   periodSeconds: 10
    
  volumeClaimTemplates:
    - metadata:
        name: mysql-persistent-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "managed-csi"
        resources:
          requests:
            storage: 1Gi
