project1/testproject/ingress2.yaml
# 8. Ingress (path-based, no host)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: my-app-service
                port:
                  number: 80

# kubectl get svc ingress-nginx-controller -n ingress-nginx                  
# /api(/|$)(.*)
